Made Changes to Readme and Folder structure for releases